Fix bad Java version